@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2022 the original author or authors.
+ * Copyright 2002-2025 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -256,7 +256,7 @@ public abstract class MessageProducerSupport extends AbstractEndpoint
 			IntegrationObservation.HANDLER.observation(
 							this.observationConvention,
 							DefaultMessageReceiverObservationConvention.INSTANCE,
-							() -> new MessageReceiverContext(message, getComponentName()),
+							() -> new MessageReceiverContext(message, getComponentName(), "message-producer"),
 							this.observationRegistry)
 					.observe(() -> this.messagingTemplate.send(getRequiredOutputChannel(), trackMessageIfAny(message)));
 		}
